tests/ballerina-test/src/test/resources/test-src/expressions/lambda/negative/fp-type-mismatch1-negative.bal
function test1()(boolean) {
     function (string, int)(boolean) foo = test2;
     return foo("this test fails at line", 2);
}

function test2(string a, float b)(boolean c){
    return false;
}